# huion-keydial-mini-uinput

./: AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
packaging/: config.yaml.default  install-udev.sh
packaging/systemd/: huion-keydial-mini-user.service
src/huion_keydial_mini/: __main__.py  bluetooth_watcher.py  config.py  device.py  event_logger.py  hid_parser.py  keybind_manager.py  keydialctl.py  main.py  notification.py  uinput_handler.py
tests/: conftest.py  test_bluetooth_watcher.py  test_combo_config.py  test_combo_hid_parser.py  test_combo_keydialctl.py  test_hid_parser.py  test_keybind_manager.py  test_modifier_hold.py  test_scroll.py
